TFP-5554: legge til beløpsformatering på flere historikkinnslag  (#7014)